version/0.12/_sources/api/solver/_autosummary/ansys.fluent.core.solver.flobject.SettingsBase.rst.txt
ansys.fluent.core.solver.flobject.SettingsBase
==============================================

.. currentmodule:: ansys.fluent.core.solver.flobject

.. autoclass:: SettingsBase

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      ~SettingsBase.__init__
      ~SettingsBase.get_attr
      ~SettingsBase.get_attrs
      ~SettingsBase.get_state
      ~SettingsBase.is_active
      ~SettingsBase.is_read_only
      ~SettingsBase.print_state
      ~SettingsBase.set_flproxy
      ~SettingsBase.set_state
      ~SettingsBase.to_python_keys
      ~SettingsBase.to_scheme_keys
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~SettingsBase.flproxy
      ~SettingsBase.fluent_name
      ~SettingsBase.obj_name
      ~SettingsBase.parent
      ~SettingsBase.path
   
   