version/0.20/_sources/api/solver/_autosummary/ansys.fluent.core.solver.flobject.SettingsBase.rst.txt
ansys.fluent.core.solver.flobject.SettingsBase
==============================================

.. currentmodule:: ansys.fluent.core.solver.flobject

.. autoclass:: SettingsBase

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      ~SettingsBase.__init__
      ~SettingsBase.after_execute
      ~SettingsBase.before_execute
      ~SettingsBase.find_object
      ~SettingsBase.get_attr
      ~SettingsBase.get_attrs
      ~SettingsBase.get_state
      ~SettingsBase.is_active
      ~SettingsBase.is_read_only
      ~SettingsBase.print_state
      ~SettingsBase.set_flproxy
      ~SettingsBase.set_state
      ~SettingsBase.state_with_units
      ~SettingsBase.to_python_keys
      ~SettingsBase.to_scheme_keys
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~SettingsBase.file_transfer_service
      ~SettingsBase.flproxy
      ~SettingsBase.fluent_name
      ~SettingsBase.obj_name
      ~SettingsBase.parent
      ~SettingsBase.path
      ~SettingsBase.python_name
      ~SettingsBase.python_path
   
   